# kmtricks

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.h.in  developers.md  flake.nix  install.sh  kmtricks-socks.py  kmtricks.py  modules.md  test.bam  usage.md
.github/workflows/: kmtricks.yml  linux.yml  osx.yml
cmake/: CPackConfig.cmake  CheckFilesystem.cmake  DetectArchitecture.cmake  GitUtils.cmake  has_filesystem.cpp
conda/: README.md
conda/kmtricks/: build.sh  conda_build_config.yaml  meta.yaml
doc/changelogs/: v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md  v1.3.0.md  v1.4.0.md
doc/releases/: desc-0.0.1.txt  desc-0.0.2.txt  desc-0.0.3.txt  desc-0.0.4.txt  desc-0.0.5.txt  desc-0.0.6.txt
docker/: Dockerfile  README.md
include/kmtricks/: bitmatrix.hpp  cli.hpp  cmd.hpp  config.h.in  exceptions.hpp  hash.hpp  histogram.hpp  howde_utils.hpp  io.hpp  itask.hpp  kmdir.hpp  kmer.hpp  kmer_hash.hpp  loop_executor.hpp  matrix.hpp  merge.hpp  minimizer.hpp  packc.hpp  plugin.hpp  plugin_manager.hpp  progress.hpp  public.hpp  repartition.hpp  signals.hpp  spinlock.hpp  state.hpp  superk.hpp  task.hpp  task_pool.hpp  task_scheduler.hpp  timer.hpp  utils.hpp
include/kmtricks/cli/: aggregate.hpp  (+13 more)
kffsk/: CMakeLists.txt  encoding.cpp  encoding.hpp  kffsk.cpp  sequences.cpp  sequences.hpp
km_howdesbt/: CMakeLists.txt  LICENSE  README.md  bit_utilities.cc  bit_utilities.h  bit_vector.cc  bit_vector.h  bloom_filter.cc  bloom_filter.h  bloom_filter_file.h  bloom_tree.cc  bloom_tree.h  cmd_build_sbt.cc  cmd_build_sbt.h  cmd_cluster.cc  cmd_cluster.h  cmd_query.cc  cmd_query.h  cmd_query_km.cc  cmd_query_km.h  cmd_version.cc  cmd_version.h  commands.h  file_manager.cc  file_manager.h  hash.h  howdesbt.cc  query.cc  query.h  sabuhash.h  support.cc  support.h  utilities.cc  utilities.h
libs/kmtricks/: CMakeLists.txt  README.md  bitmatrix.hpp  code.hpp  io.hpp  kmlib.cpp  kmlib.hpp  logging.hpp  lz4_stream.hpp  merger.hpp  minim_repart.hpp  repartition.hpp  sequences.hpp  skreader.hpp  utilities.hpp
libs/kmtricks/doc/: Doxyfile  README.md  layout.xml
libs/snippets/: CMakeLists.txt  Makefile  bitmatrix_ex.cpp  io_ex.cpp  merger_ex.cpp  minim_repart_ex.cpp  repartition_ex.cpp  sequences_ex.cpp  skreader_ex.cpp
plugins/: CMakeLists.txt
plugins/example/: basic_ex.cpp  plugin_example.cpp  plugin_example_template.cpp  template_ex.cpp
reproduce/: README.md  environment.yml
scripts/: archive-run.sh  auto_release.py  clear_run.sh  git-archive-all.sh  spot_signal.py
src/: CMakeLists.txt  CountProcessorDump.hpp  cli.cpp  config.hpp  km_configuration.cpp  km_configuration.hpp  km_merge_within_partition.cpp  km_merge_within_partition.hpp  km_minim_repart.cpp  km_minim_repart.hpp  km_output_convert.cpp  km_output_convert.hpp  km_reads_to_superk.cpp  km_reads_to_superk.hpp  km_superk_to_kmer_count.cpp  km_superk_to_kmer_counts.cpp  kmcount.cpp  kmcount.hpp  kmmerge.cpp  kmmerge.hpp  kmpart.cpp  kmsuperk.cpp  kmsuperk.hpp  kmtricks-socks.cpp  kmtricks.cpp  kmtricks.hpp  signal_handling.hpp  socks_utils.cpp  synchronizer.hpp  utils.cpp
src/howde/: bit_vector.cpp
tests/: CMakeLists.txt  bam_test.cpp  bit_matrix_test.cpp  gatb_test.cpp  histogram_test.cpp  kmer_hash_test.cpp  kmer_test.cpp  main_test.cpp  merge_test.cpp  packc_test.cpp  processor_test.cpp  repartition_test.cpp  task_main.cpp  test_ref_filter.cpp  utils_test.cpp
tests/data/: 1.fasta  1.fasta.bz2  1.fasta.zst  2.fasta.bz2  2.fasta.zst  fof.txt  hash.info  kmtricks.fof  kmtricks_bz.fof  kmtricks_zstd.fof
tests/data/partitions/hashes/partition_0/: D1.hash  D2.hash
tests/data/partitions/hashes/partition_1/: D1.hash  D2.hash
tests/data/partitions/hashes/partition_2/: D1.hash  D2.hash
tests/data/partitions/hashes/partition_3/: D1.hash  D2.hash
tests/data/partitions/kmers/partition_0/: D1.kmer  D2.kmer
tests/data/partitions/kmers/partition_1/: D1.kmer  D2.kmer
tests/data/partitions/kmers/partition_2/: D1.kmer  D2.kmer
tests/data/partitions/kmers/partition_3/: D1.kmer  D2.kmer
tests/data/repart_gatb/: repartition.minimRepart
tests/io/: fof_test.cpp  hash_file_test.cpp  kmer_file_test.cpp  matrix_file_test.cpp  pa_matrix_file_test.cpp  vector_file_test.cpp
tests/kmtricks/: CMakeLists.txt  README.md  example1.sh  example2.sh  example3.sh  experiment_list_100.txt  experiment_list_674.txt  run_test.sh
tests/kmtricks/data/: 2.fasta  fof.txt  fof_socks.txt  socks_query
tests/kmtricks/res/kmerparts/partition_0/: 1.fasta.kmer  2.fasta.kmer  D1.kmer.lz4  D2.kmer.lz4  partition0.fof
tests/kmtricks/res/kmerparts/partition_1/: 1.fasta.kmer  2.fasta.kmer  2.fasta.kmer.lz4  D1.kmer.lz4  D2.kmer.lz4  partition1.fof
tests/kmtricks/res/kmerparts/partition_2/: 1.fasta.kmer  2.fasta.kmer  D1.kmer.lz4  D2.kmer.lz4  partition2.fof
tests/kmtricks/res/kmerparts/partition_3/: 1.fasta.kmer  1.fasta.kmer.lz4  2.fasta.kmer  2.fasta.kmer.lz4  D1.kmer.lz4  D2.kmer.lz4  partition3.fof
tests/kmtricks/res/matrices/partition_0/: ascii_matrix0.mat  no_trp_bf0.mat  trp_bf0.mat
tests/kmtricks/res/matrices/partition_1/: ascii_matrix1.mat  no_trp_bf1.mat  trp_bf1.mat
tests/kmtricks/res/matrices/partition_2/: ascii_matrix2.mat  no_trp_bf2.mat  trp_bf2.mat
tests/kmtricks/res/matrices/partition_3/: ascii_matrix3.mat  no_trp_bf3.mat  trp_bf3.mat
tests/kmtricks/res/superkparts/1.fasta.superk/: superKparts.0
tests/kmtricks/res/superkparts/2.fasta.superk/: superKparts.2  superKparts.3
tests/kmtricks/res/superkparts/D1.superk/: superKparts.1  superKparts.2  superKparts.3
tests/kmtricks/res/superkparts/D2.superk/: superKparts.0
tests/libs/: CMakeLists.txt  README.md  googletest_main.cpp  run_test.sh  test_bitmatrix.cpp  test_code.cpp  test_io.cpp  test_merger.cpp  test_repartition.cpp  test_sequences.cpp  test_skreader.cpp
tests/libs/merge_data/: fof.txt  fof_kmer.txt  merge_a1r1.txt  merge_a1r2.txt  merge_a2r1.txt  toy1.txt  toy1_kmer.txt  toy2.txt  toy2_kmer.txt
tests/libs/repartition_data/: minimRepart.minimRepart
tests/libs/skreader_data/sk_part/: superKparts.1  superks0.txt
(+297 files in other folders)
