file(GLOB ProjectFiles RELATIVE ${PROJECT_SOURCE_DIR}/libs/snippets *.cpp)
foreach( source_file ${ProjectFiles})
    set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/snippets)
    string ( REPLACE ".cpp" "" name ${source_file})
    add_executable(${name} ${source_file})
    add_dependencies(${name} gatb FMT SDSL LZ4)
    target_include_directories(${name} PUBLIC ${LZ_INCLUDE})
    target_link_libraries(${name} z ${OPENMP} lz4)
    target_compile_options(${name} PRIVATE -Wall)
endforeach( source_file ${ProjectFiles})